# AI_banking_support_agent

./: .env.backend.example  .env.example  .env.frontend.example  .env.voice.example  .gitignore  ARCHITECTURE.md  DATASETS.md  DEMO_QUICKSTART.md  EXPLAINED_PIPELINE.md  FULL_LOCAL_RUN_GUIDE.md  LIVEKIT_INTEGRATION_ARCHITECTURE.md  README.md  RUNTIME_ARCHITECTURE.md  START_FRESH.bat  START_STACK.bat  START_TEXT_CHAT.bat  START_VOICE.bat  STOP_STACK.bat  cli.py  demo_config.yaml  docker-compose.yml  frontend_demo.py  llm_config.example.yaml  llm_config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_runtime_api.py  runtime_config.example.yaml  runtime_config.yaml  validation_config.yaml  validation_manifest_update_hy.yaml  validation_manifest_update_multi.yaml  voice_config.example.yaml
.github/workflows/: ci.yml
data/branches/: acba_branches.jsonl  ameriabank_branches.jsonl  (+1 more)
docker/: livekit.yaml
docs/: PROMPT_ARCHITECTURE.md
frontend-react/: .env.example  index.html  package-lock.json  package.json  vite.config.js
manifests/: banks.yaml
scripts/: generate_livekit_token.py  run_all.bat  run_all.sh  run_backend.bat  run_backend.sh  run_frontend.bat  run_frontend.sh  run_full_pipeline.ps1  run_livekit.bat  run_livekit.sh  run_text_chat_stack.ps1  run_voice_agent.bat  run_voice_agent.sh  run_voice_stt_server.bat  run_voice_tts_server.bat  setup_env.bat  setup_env.sh  start_stack.ps1  start_voice_only.ps1  stop_stack.ps1  voice_http_stt_server.py  voice_http_tts_server.py
tests/: test_api_health.py  test_bank_scope.py  test_bank_specific_extraction.py  test_branch_parsing.py  test_chunking_behavior.py  test_cleaning_noise_removal.py  test_config_loading.py  test_embedding_device.py  test_evidence_bank_scope.py  test_evidence_pack.py  test_evidence_select.py  test_gemini_llm.py  test_gemini_llm_client.py  test_hy_stt_postprocess.py  test_intent_llm.py  test_livekit_playout.py  test_llm_config.py  test_manifest_loading.py  test_orchestration_strict.py  test_orchestration_strict_gates.py  test_orchestrator_stream_handle.py  test_pending_clarify_flow.py  test_production_hardening.py  test_query_answer_hints.py  test_runtime_chat_client.py  test_runtime_config_and_backends.py  test_runtime_followup_and_bank.py  test_runtime_llm_backend.py  test_runtime_orchestrator_bank.py  test_runtime_refusal_and_evidence.py  test_runtime_smoke.py  test_runtime_topic_classifier.py  test_seed_url_normalize.py  test_structured_fetchers.py  test_stt_normalize.py  test_submission_e2e_chat.py  test_topic_label_validation.py  test_tts_chunking.py  test_tts_speech_prepare.py  test_validation_config_paths.py  (+8 more)
(+387 files in other folders)
