[project]
name = "voice-ai-banking-support-agent"
version = "0.1.0"
description = "Offline ingestion + indexing pipeline for an Armenian voice AI banking support agent (RAG-ready)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.1",
  "pyyaml>=6.0.2",
  "tenacity>=9.0.0",
  "sentence-transformers>=3.0.1",
  "faiss-cpu>=1.8.0",
  "rank-bm25>=0.2.2",
  "numpy>=1.26.0",
  "tqdm>=4.67.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-dotenv>=1.0.0",
  "livekit-api>=0.8.0",
  "google-generativeai>=0.8.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
playwright = ["playwright>=1.45.0"]
voice = [
  "livekit>=0.11.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]
# Optional: local STT/TTS HTTP servers (scripts/voice_http_*_server.py)
voice_local_servers = [
  "faster-whisper>=1.0.0",
  "edge-tts>=6.1.0",
  "miniaudio>=1.61",
  "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
markers = [
    "slow: loads FAISS + embeddings (session e2e; run with pytest -m slow)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["voice_ai_banking_support_agent*"]

